# synthesizer

./: .travis.yml  CMakeLists.txt  README.md
ci/: cmake-3.4.1-Linux-x86_64.tar.gz.sha256  fetch-cmake.sh
data/: sine1k.json  test-track.json
inc/: clock.hh  generator.hh  generator_factory.hh  generator_sine.hh  noise.hh  sequencer.hh  sine.hh  track.hh  utils.hh
src/: CMakeLists.txt  generator.cc  generator_factory.cc  generator_sine.cc  noise.cc  sequencer.cc  sine.cc  syn.cc  track.cc
test/: CMakeLists.txt  integration_generator_factory.cc  integration_track.cc  unit_generator.cc  unit_generator_sine.cc  unit_track.cc
